--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\u04853004190\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\paulo\\AppData\\Roaming\\NetBeans\\18\\build.properties
