--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/SistemaPauloTavares.jar
+dist.jar=${dist.dir}/Sistema-Paulo-victor-LP5.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/SistemaPauloTavares
+dist.jlink.output=${dist.jlink.dir}/Sistema-Paulo-victor-LP5
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=SistemaPauloTavares
-main.class=sistemapaulotavares.SistemaPauloTavares
+jlink.launcher.name=Sistema-Paulo-victor-LP5
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
